--- a/dashboard/templates/settings/stream_branches.html
+++ b/dashboard/templates/settings/stream_branches.html
@@ -37,7 +37,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
           <div class="caption">
-            <h3>{{ relbranch.relbranch_name }}
+              <h3><span data-toggle="tooltip" title="{{ relbranch.relbranch_slug }}">{{ relbranch.relbranch_name }}</span>
                 {% if relbranch.scm_branch %}
                     <small>{{ relbranch.scm_branch }}</small>
                 {% endif %}
