--- a/dashboard/templates/jobs/jobs_home.html
+++ b/dashboard/templates/jobs/jobs_home.html
@@ -28,28 +28,13 @@ function getUrlVars(){for(var t,e=[],s=window.location.href.slice(window.locatio
 <hr/>
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">Sync Translation Platforms
-        <span id="transplatformwaiting" class="pull-right"></span></h3>
-  </div>
-  <div class="panel-body">
-    This would initiate a synctransplatform job to update:
-      <span class="text-info"> translation platform&apos;s projects and their details in {{ app_name }}.</span><hr/>
-    <form method="post" id ="syncTransForm" class="form-horizontal">{% csrf_token %}
-        <input type="hidden" value="synctransplatform" id="syncTransIdentifier"/>
-        <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
-            <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
-        <span id="syncTransMsg"></span>
-    </form>
-  </div>
-</div>
-<div class="panel panel-default">
-  <div class="panel-heading">
     <h3 class="panel-title">Sync Package Upstream
         <span id="upstreamwaiting" class="pull-right"></span></h3>
   </div>
   <div class="panel-body">
     This would initiate a syncupstream job to update:
-      <span class="text-info"> clone package upstream repository, filter translations and calculate translation statistics.</span><hr/>
+      <span class="text-info" data-toggle="tooltip" title="After sync, head to package details page for upstream stats or inspect log.">
+          clone package upstream repository, filter translations and calculate translation statistics.</span><hr/>
     <form method="post" id ="syncUpstreamForm" class="form-horizontal">{% csrf_token %}
         <input type="hidden" value="syncupstream" id="syncUpstreamIdentifier"/>
         {% if packages %}
@@ -70,6 +55,39 @@ function getUrlVars(){for(var t,e=[],s=window.location.href.slice(window.locatio
 </div>
 <div class="panel panel-default">
   <div class="panel-heading">
+      <h3 class="panel-title">Sync Build Tags
+          <span id="buildtagswaiting" class="pull-right"></span></h3>
+  </div>
+  <div class="panel-body">
+    This would initiate a syncbuildtags job to update:
+      <span class="text-info" data-toggle="tooltip" title="Build tags are prerequisite to branch mapping and downstream sync.">
+          tags of build systems for releases.</span><hr/>
+    <form method="post" id ="syncBuildTagsForm" class="form-horizontal">{% csrf_token %}
+        <input type="hidden" value="syncbuildtags" id="syncBuildTagsIdentifier"/>
+        <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
+            <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
+        <span id="syncBuildTagsMsg"></span>
+    </form>
+  </div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Sync Translation Platforms
+        <span id="transplatformwaiting" class="pull-right"></span></h3>
+  </div>
+  <div class="panel-body">
+    This would initiate a synctransplatform job to update:
+      <span class="text-info"> translation platform&apos;s projects and their details in {{ app_name }}.</span><hr/>
+    <form method="post" id ="syncTransForm" class="form-horizontal">{% csrf_token %}
+        <input type="hidden" value="synctransplatform" id="syncTransIdentifier"/>
+        <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
+            <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
+        <span id="syncTransMsg"></span>
+    </form>
+  </div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
       <h3 class="panel-title">Sync Release Schedule {{ key }}
           <span id="relschedulewaiting" class="pull-right"></span></h3>
   </div>
@@ -81,22 +99,6 @@ function getUrlVars(){for(var t,e=[],s=window.location.href.slice(window.locatio
         <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
             <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
         <span id="syncCalendarMsg"></span>
-    </form>
-  </div>
-</div>
-<div class="panel panel-default">
-  <div class="panel-heading">
-      <h3 class="panel-title">Sync Build Tags
-          <span id="buildtagswaiting" class="pull-right"></span></h3>
-  </div>
-  <div class="panel-body">
-    This would initiate a syncbuildtags job to update:
-      <span class="text-info"> tags in build system.</span><hr/>
-    <form method="post" id ="syncBuildTagsForm" class="form-horizontal">{% csrf_token %}
-        <input type="hidden" value="syncbuildtags" id="syncBuildTagsIdentifier"/>
-        <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
-            <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
-        <span id="syncBuildTagsMsg"></span>
     </form>
   </div>
 </div>
