--- a/dashboard/templates/jobs/jobs_yml_based.html
+++ b/dashboard/templates/jobs/jobs_yml_based.html
@@ -1,4 +1,5 @@
 {% extends "jobs/jobs_base.html" %}
+{% load custom_tags %}
 
 {% block extrascript %}
 <style type="text/css">
@@ -6,7 +7,115 @@
 </style>
 <script src="/static/js/csrf.js"></script>
 <script type="text/javascript">
-    function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}function getUrlVars(){for(var e,t=[],a=window.location.href.slice(window.location.href.indexOf("?")+1).split("&"),n=0;n<a.length;n++)e=a[n].split("="),t.push(e[0]),t[e[0]]=e[1];return t}var poll_timeout;function ajax_read_logs(){!function e(){poll_timeout=setTimeout(function(){$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-read-logs' %}",success:function(e){e&&$("#div-job-output").html(e)},complete:e})},2e3)}()}function ajax_yml_jobs(){dryRun="",$("#chkDryRun").is(":checked")&&(dryRun=$("#chkDryRun").val()),$.ajax({beforeSend:function(e,t){csrfSafeMethod(t.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),ajax_read_logs(),$("#span-job-progress").html("<img src='/static/img/spin.gif'></img>")},type:"POST",url:"{% url 'ajax-schedule-job' %}",data:{job:$("#ymlBasedJobIdentifier").val(),YML_FILE:$("#YMLfile").val(),PACKAGE_NAME:$("#pkgName").val(),BUILD_TAG:$("#buildTag").val(),DRY_RUN:dryRun},success:function(e){clearTimeout(poll_timeout),$("#job-result").html(e),$("#span-job-progress").html("<span class='glyphicon glyphicon-ok-sign' style='color:green'></span>"),$("#div-reset-button").html("<a href='/jobs/yml-based' class='btn btn-default pull-right' type='button'>Reset</a>")},error:function(e,t,a){clearTimeout(poll_timeout),$("#job-result").html(e),$("#span-job-progress").html("<span class='glyphicon glyphicon-exclamation-sign' style='color:orange'></span>")}})}$(document).ready(function(){$("#tab-yml-based").addClass("active"),getUrlVars().package&&$("#pkgName").val(getUrlVars().package),getUrlVars().tag&&$("#buildTag").val(getUrlVars().tag),$("#fireJobLink").click(function(e){return e.preventDefault(),ajax_yml_jobs(),!1});var e=$("div.setup-panel div a"),t=$(".setup-content"),a=$(".nextBtn"),n=$(".prevBtn");t.hide(),e.click(function(a){a.preventDefault();var n=$($(this).attr("href")),s=$(this);s.hasClass("disabled")||(e.removeClass("btn-primary").addClass("btn-default"),s.addClass("btn-primary"),t.hide(),n.show(),n.find("input:eq(0)").focus())}),n.click(function(){var e=$(this).closest(".setup-content").attr("id");$('div.setup-panel div a[href="#'+e+'"]').parent().prev().children("a").removeAttr("disabled").trigger("click")}),a.click(function(){var e=$(this).closest(".setup-content"),t=e.attr("id"),a=$('div.setup-panel div a[href="#'+t+'"]').parent().next().children("a"),n=e.find("input[type='text'],input[type='url']"),s=!0;$(".form-group").removeClass("has-error");for(var r=0;r<n.length;r++)n[r].validity.valid||(s=!1,$(n[r]).closest(".form-group").addClass("has-error"));s&&a.removeAttr("disabled").trigger("click")}),$("div.setup-panel div a.btn-primary").trigger("click"),$(function(){$(".dropdown-menu a").click(function(){console.log($(this).attr("data-value")),$(this).closest(".dropdown").find("input.options").val($(this).attr("data-value"))})}),$("#pkgName").click(function(){$(this).val("")}),$("#buildTag").click(function(){$(this).val("")})});
+function csrfSafeMethod(e) {
+    return /^(GET|HEAD|OPTIONS|TRACE)$/.test(e)
+}
+
+function getUrlVars() {
+    for (var e, t = [], a = window.location.href.slice(window.location.href.indexOf("?") + 1).split("&"), n = 0; n < a.length; n++) e = a[n].split("="), t.push(e[0]), t[e[0]] = e[1];
+    return t
+}
+var poll_timeout;
+
+function ajax_read_logs() {
+    ! function e() {
+        poll_timeout = setTimeout(function() {
+            $.ajax({
+                beforeSend: function(e, t) {
+                    csrfSafeMethod(t.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"))
+                },
+                type: "POST",
+                url: "{% url 'ajax-read-logs' %}",
+                success: function(e) {
+                    e && $("#div-job-output").html(e)
+                },
+                complete: e
+            })
+        }, 2e3)
+    }()
+}
+
+function ajax_build_tags() {
+    $.ajax({
+        beforeSend: function(e, t) {
+            csrfSafeMethod(t.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"))
+        },
+        type: "POST",
+        url: "{% url 'ajax-build-tags' %}",
+        data: {
+            buildsys: $("#buildSystem").val()
+        },
+        success: function(e) {
+            e && $("#div-build-tags").html(e)
+        }
+    })
+}
+
+function ajax_yml_jobs() {
+    dryRun = "", $("#chkDryRun").is(":checked") && (dryRun = $("#chkDryRun").val()), $.ajax({
+        beforeSend: function(e, t) {
+            csrfSafeMethod(t.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), ajax_read_logs(), $("#span-job-progress").html("<img src='/static/img/spin.gif'></img>")
+        },
+        type: "POST",
+        url: "{% url 'ajax-schedule-job' %}",
+        data: {
+            job: $("#ymlBasedJobIdentifier").val(),
+            YML_FILE: $("#YMLfile").val(),
+            PACKAGE_NAME: $("#pkgName").val(),
+            BUILD_SYSTEM: $("#buildSystem").val(),
+            BUILD_TAG: $("#buildTag").val(),
+            DRY_RUN: dryRun
+        },
+        success: function(e) {
+            clearTimeout(poll_timeout), $("#job-result").html(e), $("#span-job-progress").html("<span class='glyphicon glyphicon-ok-sign' style='color:green'></span>"), $("#div-reset-button").html("<a href='/jobs/yml-based' class='btn btn-default pull-right' type='button'>Reset</a>")
+        },
+        error: function(e, t, a) {
+            clearTimeout(poll_timeout), $("#job-result").html(e), $("#span-job-progress").html("<span class='glyphicon glyphicon-exclamation-sign' style='color:orange'></span>")
+        }
+    })
+}
+
+$(document).ready(function() {
+    $("#tab-yml-based").addClass("active"), getUrlVars().package && $("#pkgName").val(getUrlVars().package), getUrlVars().buildsys && $("#buildSystem").val(getUrlVars().buildsys), getUrlVars().tag && $("#buildTag").val(getUrlVars().tag), $("#fireJobLink").click(function(e) {
+        return e.preventDefault(), ajax_yml_jobs(), !1
+    });
+
+    $("#buildSystem").change(function(e) {
+        return e.preventDefault(), ajax_build_tags(), !1
+    });
+
+    var e = $("div.setup-panel div a"),
+        t = $(".setup-content"),
+        a = $(".nextBtn"),
+        n = $(".prevBtn");
+
+    t.hide(), e.click(function(a) {
+        a.preventDefault();
+        var n = $($(this).attr("href")),
+            s = $(this);
+        s.hasClass("disabled") || (e.removeClass("btn-primary").addClass("btn-default"), s.addClass("btn-primary"), t.hide(), n.show(), n.find("input:eq(0)").focus())
+    }), n.click(function() {
+        var e = $(this).closest(".setup-content").attr("id");
+        $('div.setup-panel div a[href="#' + e + '"]').parent().prev().children("a").removeAttr("disabled").trigger("click")
+    }), a.click(function() {
+        var e = $(this).closest(".setup-content"),
+            t = e.attr("id"),
+            a = $('div.setup-panel div a[href="#' + t + '"]').parent().next().children("a"),
+            n = e.find("input[type='text'],input[type='url']"),
+            s = !0;
+        $(".form-group").removeClass("has-error");
+        for (var r = 0; r < n.length; r++) n[r].validity.valid || (s = !1, $(n[r]).closest(".form-group").addClass("has-error"));
+        s && a.removeAttr("disabled").trigger("click")
+    }), $("div.setup-panel div a.btn-primary").trigger("click"), $(function() {
+        $(".dropdown-menu a").click(function() {
+            console.log($(this).attr("data-value")), $(this).closest(".dropdown").find("input.options").val($(this).attr("data-value"))
+        })
+    }), $("#pkgName").click(function() {
+        $(this).val("")
+    }), $("#buildTag").click(function() {
+        $(this).val("")
+    });
+});
 </script>
 {% endblock %}
 
@@ -45,7 +154,7 @@
 job:
   name: downstream stats
   type: syncdownstream
-  buildsys: koji
+  buildsys: %BUILD_SYSTEM%
   exception: raise
   execution: sequential
   package: %PACKAGE_NAME%
@@ -85,15 +194,21 @@ job:
                 </div>
               </div>
               <div class="form-group">
-                <label class="control-label">Build Tag</label>
-                <div class="input-group dropdown">
-                    <input id="buildTag" type="text" class="form-control options dropdown-toggle" value="Select Build Tag">
-                    <ul class="dropdown-menu">
-                        {% for build_tag in build_tags %}
-                            <li><a href="#" data-value="{{ build_tag }}">{{ build_tag }}</a></li>
+                <label class="control-label">Build System and Tag</label>
+                <div style="padding-bottom:10px">
+                    {% if build_systems %}
+                    <select id="buildSystem" class="selectpicker">
+                        <option selected disabled>Select Build System</option>
+                        {% for build_system in build_systems %}
+                            <option>{{ build_system }}</option>
                         {% endfor %}
-                    </ul>
-                    <span role="button" class="input-group-addon dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></span>
+                    </select>
+                    {% else %}
+                        <br/><p>No products (release stream) configured.</p>
+                    {% endif %}
+                </div>
+                <div id="div-build-tags">
+                    {% tag_build_tags 'dummy' %}
                 </div>
               </div>
               <button class="btn btn-default prevBtn pull-left" type="button">Previous</button>
