--- a/dashboard/templates/stats/_branch_mapping.html
+++ b/dashboard/templates/stats/_branch_mapping.html
@@ -2,7 +2,8 @@
 {% if branch_mapping %}
     <div class="panel panel-default">
       <div class="panel-heading" style="padding-bottom:20px">
-        <span style="font-size:large">Branch Mapping</span>
+          <span style="font-size:large">Branch Mapping&nbsp;&nbsp;
+              <small class="text-muted">(<i>this mapping is basis to comparision of statistics</i>)</small></span>
         <span class="pull-right">
             {% if mapping_lastupdated %}
                 <span class="text-muted">Last Updated:</span> {{ mapping_lastupdated|timesince }}
@@ -23,7 +24,14 @@
             <tr>
                 <td>{{ branch }}</td>
                 <td>{{ version|get_item:mapping_keys.0 }}</td>
-                <td>{{ version|get_item:mapping_keys.1 }}</td>
+                <td>
+                    {{ version|get_item:mapping_keys.2 }}&nbsp;
+                    {%if version|get_item:mapping_keys.1 and version|get_item:mapping_keys.2 %}
+                        <a type="button" class="btn btn-small pull-right"  data-toggle="tooltip" title="Sync with {{ version|get_item:mapping_keys.1 }}"
+                           href="{% url 'jobs-yml-based' %}?package={{ package_name }}&buildsys={{ version|get_item:mapping_keys.1 }}&tag={{ version|get_item:mapping_keys.2 }}">
+                            <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></a>
+                    {% endif %}
+                </td>
             </tr>
             {% endfor %}
         </tbody>
