--- a/dashboard/templates/jobs/jobs_yml_based.html
+++ b/dashboard/templates/jobs/jobs_yml_based.html
@@ -167,6 +167,7 @@ job:
     - unpack: SRPM
     - load: Spec file
     - unpack: tarball
+    - apply: patch
     - filter: PO files
     - calculate: Stats
                   </textarea>
