--- a/dashboard/templates/jobs/jobs_base.html
+++ b/dashboard/templates/jobs/jobs_base.html
@@ -2,7 +2,7 @@
 
 {% block pagebanner %}
     <div style="padding-left:20px">
-      <h1>Jobs <small>&nbsp;Sync with platforms, build systems, source repositories or calendars ...</small></h1>
+      <h1>Jobs <small>&nbsp;Sync with platforms, build systems, source repositories and calendars ...</small></h1>
     </div>
 {% endblock %}
 
